--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>2022 고신노회 신년감사예배</title>
+    <title>2022 고신 부산노회 신년감사예배</title>
     <meta content="2022 부산노회 신년감사예배 및 인사회 개최" name="description"/>
     <meta property="og:image" content="images/pic2.png">
     <meta property="fb:app_id" content="781066922265598" />
@@ -31,13 +31,13 @@
 <body id="top">
 <header></header>
 <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="  "></script>
+<script async defer crossorigin="anonymous" src=""></script>
 <div class="page-content">
     <div class="div">
         <div class="ww-home-page" id="home">
             <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
                 <div class="container ww-announcement-container">
-                    <p class="ww-couple-name ww-title" style="font-size:3.0em">당신을 초대합니다</p>
+                    <p class="ww-couple-name ww-title" style="font-size:2.5em">당신을 초대합니다</p>
                     <p class="h2 mt-5 ww-title" style="font-family: 'Gugi', cursive; font-size:1.0em">
                         | 2022 부산노회 신년감사예배 및 인사회 |
                     </p>
