--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>2022 고신 부산노회 신년감사예배</title>
+    <title>2022 부산노회 신년감사예배 초청장</title>
     <meta content="2022 부산노회 신년감사예배 및 인사회 개최" name="description"/>
     <meta property="og:image" content="images/pic2.png">
     <meta property="fb:app_id" content="781066922265598" />
@@ -37,14 +37,14 @@
         <div class="ww-home-page" id="home">
             <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
                 <div class="container ww-announcement-container">
-                    <p class="ww-couple-name ww-title" style="font-size:2.5em">당신을 초대합니다</p>
-                    <p class="h2 mt-5 ww-title" style="font-family: 'Gugi', cursive; font-size:1.0em">
+                    <p class="ww-couple-name ww-title" style="font-size:4.0em">초청장</p>
+                    <p class="h2 mt-5 ww-title" style="font-family: 'Gugi', cursive; font-size:1.5em">
                         | 2022 부산노회 신년감사예배 및 인사회 |
                     </p>
                     <p class="h2 mt-5 ww-title"
-                       style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
-                        <b style="font-size:1.4em;">2022. 01. 06. THU PM 07:00</b>
-                        <br>수정교회당(이희영목사 시무, 동구 수정북로 9 ☎464-3556)
+                       style="font-family: 'Noto Serif KR', serif; font-size:1.5em; letter-spacing:-1px">
+                        <b style="font-size:1.3em;">2022. 01. 06. (목) 오후 07:00</b>
+                        <br>수정교회당(이희영목사 시무, 동구 수정북로 9)<br> ☎051-464-3556
                     </p>
                 </div>
             </div>
@@ -71,9 +71,10 @@
             <div class="container">
                 <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">할렐루야!</h2>
                     <div class="col text-center mb-5">
-                        <h6 style="font-family: 'Noto Serif KR', serif;">
+                        <h6 style="font-family: 'Noto Serif KR', serif;font-size:2.0em">
                                 하나님의 은총이<br>귀교회위에 충만하시길 기원합니다.<br>
-                                부산노회가 주최하고, 장로회가 주관하는<br>부산노회 지도자 신년감사예배 및 인사회를<br>아래와 같이 개최하오니,<br><br>어려운 시기이지만 부산노회가 하나 되어<br>하나님께 영광을 돌리고<br>힘차게 새해를 시작할 수 있는 기회가 되도록<br> 참석하여 주시기 바랍니다.<br><br>위원장 현근호 목사 올림</h2>
+                                부산노회가 주최하고, 장로회가 주관하는<br>부산노회 지도자 신년감사예배 및 인사회를<br>아래와 같이 개최하오니,<br><br>어려운 시기이지만 부산노회가 하나 되어<br>하나님께 영광을 돌리고<br>힘차게 새해를 시작할 수 있는 기회가 되도록<br> 참석하여 주시기 바랍니다.<br><br>위원장 현 근 호 목사(부산노회장)<br>
+                                부위원장 김    현 장로(부산노회 장로회장)</h2>
                         </div>
                     </div>
                 </div>
@@ -84,8 +85,8 @@
                 <div class="col text-center">
                     <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;">수정교회(담임목사 이희영)</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">부산광역시 동구 수정북로 9</h6>
+                        <h5 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">수정교회(담임목사 이희영)</h5>
+                        <h6 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">부산광역시 동구 수정북로 9</h6>
                     </div>
                 </div>
 
@@ -106,8 +107,8 @@
                             </a>
                         </div>
                         <div class="col text-center">
-                            <label style="font-family: 'Noto Serif KR', serif; font-size: 15px;">
-                                문의전화: 010-9909-5147(괴정제일교회 김종은 장로)
+                            <label style="font-family: 'Noto Serif KR', serif;font-size:1.3em">
+                                문의전화: 010-9909-5147<br>(괴정제일교회 김종은 장로)
                             </label>
                         </div>
                         <div class="my-3">
