--- a/index.html
+++ b/index.html
@@ -33,22 +33,6 @@
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src=""></script>
 <div class="page-content">
-    <div class="div">
-        <div class="ww-home-page" id="home">
-            <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
-                <div class="container ww-announcement-container">
-                    <p class="ww-couple-name ww-title" style="font-size:4.0em">초청장</p>
-                    <p class="h2 mt-5 ww-title" style="font-family: 'Gugi', cursive; font-size:1.3em">
-                        | 2022 부산노회 신년감사예배 및 인사회 |
-                    </p>
-                    <p class="h2 mt-5 ww-title"
-                       style="font-family: 'Noto Serif KR', serif; font-size:1.5em; letter-spacing:-1px">
-                        <b style="font-size:1.3em;">2022. 01. 06. (목)<br>오후 07:00</b>
-                        <br>수정교회당(이희영목사 시무)<br> ☎051-464-3556
-                    </p>
-                </div>
-            </div>
-        </div>
         <div class="ww-nav-bar sticky-top bg-light">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
@@ -70,11 +54,14 @@
         <div class="ww-section" id="couple">
             <div class="container">
                 <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">할렐루야!</h2>
-                    <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;font-size:1.7em">
-                                하나님의 은총이<br>귀교회위에 충만하시길 기원합니다.<br>
-                                부산노회가 주최하고,<br> 장로회가 주관하는<br>부산노회 지도자 신년감사예배 및<br> 인사회를 아래와 같이 개최하오니,<br><br>어려운 시기이지만<br> 부산노회가 하나 되어<br>하나님께 영광을 돌리고<br>힘차게 새해를 시작할 수 있는<br> 기회가 되도록<br> 참석하여 주시기 바랍니다.<br><br>위  원  장 현 근 호 목사<br>  (부 산 노 회 장)<br>
-                                부위원장 김현 장로<br>(부산노회 장로회장)</h2>
+                                하나님의 은총이 귀교회위에 충만하시길 기원합니다.<br>
+                                부산노회가 주최하고,장로회가 주관하는부산노회 지도자 신년감사예배 및 인사회를 아래와 같이 개최하오니,어려운 시기이지만
+                                부산노회가 하나 되어하나님께 영광을 돌리고힘차게 새해를 시작할 수 있는 기회가 되도록 참석하여 주시기 바랍니다.<br><br>위원장 현근호 목사(부산노회장)<br>
+                                부위원장 김 현 장로(부산노회 장로회장)<br><br></h2>
+                        </div>
+                        <div>
+                            <h6 style="text-align:center;font: size 1.5em;">※ 참석자에게 식사비와 기념품을 드립니다. </h6>
                         </div>
                     </div>
                 </div>
@@ -108,19 +95,13 @@
                         </div>
                         <div class="col text-center">
                             <label style="font-family: 'Noto Serif KR', serif;font-size:1.2em">
-                                문의전화: 010-9909-5147<br>(괴정제일교회 김종은 장로)
                             </label>
                         </div>
                         <div class="my-3">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3263.0266508079935!2d129.04145721560198!3d35.1310084675571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ebc722a85d27%3A0x70112a35ec821834!2z7IiY7KCV6rWQ7ZqM!5e0!3m2!1sko!2skr!4v1639631724527!5m2!1sko!2skr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
-                        <div>
-                            <h6 style="text-align:center, font-family: 'Noto Serif KR', serif;font-size:1.5em">※ 참석자에게 식사비와 기념품을 드립니다. </h6>
-                        </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
