--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="col text-center">
                     <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">수정교회(담임목사 이희영)</h5>
+                        <h5 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">수정교회(담임목사 이희영 ☎464-3556)</h5>
                         <h6 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">부산광역시 동구 수정북로 9</h6>
                     </div>
                 </div>
