--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                         <h6 style="font-family: 'Noto Serif KR', serif;font-size:1.7em">
                                 하나님의 은총이 귀교회위에 충만하시길 기원합니다.<br><br>
                                 부산노회가 주최하고,장로회가 주관하는부산노회 지도자 신년감사예배 및 인사회를 아래와 같이 개최하오니,<br><br>어려운 시기이지만
-                                부산노회가 하나 되어하나님께 영광을 돌리고힘차게 새해를 시작할 수 있는 기회가 되도록 참석하여 주시기 바랍니다.<br><br>위원장 현근호 목사(부산노회장)<br>
-                                부위원장 김 현 장로(부산노회 장로회장)<br><br></h2>
+                                부산노회가 하나 되어하나님께 영광을 돌리고힘차게 새해를 시작할 수 있는 기회가 되도록 참석하여 주시기 바랍니다.<br><br>
+                                위 원 장 현근호 목사(부산노회장)<br>
+                                부위원장 김  현 장로(부산노회 장로회장)<br><br></h2>
                         </div>
                         <div>
                             <h6 style="text-align:center;font: size 1.5em;">※ 참석자에게 식사비와 기념품을 드립니다. </h6>
