--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@
                     </button>
                     <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">home</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Greetings</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Maps</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#Greetings">Greetings</a></li>
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#Maps">Maps</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
-        <div class="ww-section" id="couple">
+        <div class="ww-section" id="Greetings">
             <div class="container">
                  <tr>
                     <td align="center" valign="top" colspan="2" >
@@ -62,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="ww-section bg-light" id="events">
+        <div class="ww-section bg-light" id="Maps">
             <div class="container ww-wedding-event">
                 <div class="col text-center">
                     <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
