--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gamja+Flower|Gugi|Noto+Serif+KR|Stylish|Sunflower:300"
           rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
-
+    <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.js" type="text/javascript"></script>
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="ww-section bg-light" id="Maps">
+        <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
                 <div class="col text-center">
                     <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
@@ -101,5 +101,20 @@
     </div>
 </div>
 </div>
+<script type='text/javascript'>
+    //<![CDATA[
+      // // 사용할 앱의 JavaScript 키를 설정해 주세요.
+      Kakao.init('6d4263c13549028b4671157e4fa06797');
+      // // 카카오링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
+      Kakao.Link.createDefaultButton({
+        container: '#kakao-link-btn',
+        objectType: 'feed',
+      content: {
+        title: '2022 부산노회 지도자 신년 감사예배',
+        description: '부산노회 지도자 신년 감사예배에 여러분을 초청합니다.',
+      }
+    });
+//]]>
+</script>
 </body>
 </html>
