--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>2022 부산노회 신년감사예배 초청장</title>
     <meta content="2022 부산노회 신년감사예배 및 인사회 개최" name="description"/>
     <meta property="og:image" content="images/pic3.png">
-    <meta property="fb:app_id" content="781066922265598" />
-    <meta property="fb:admins" content="Choi.Anderson"/>
     <link href="images/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="images/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
     <link href="images/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
@@ -27,8 +25,8 @@
 
     </script>
 </head>
-
 <body id="top">
+    <!--p id="notice">이 서비스는 카카오톡에서 제공되는 서비스로 카카오톡 연결 등 서비스가 일부 지원하지 않습니다.</div-->
 <header></header>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src=""></script>
@@ -112,6 +110,11 @@
       content: {
         title: '2022 부산노회 지도자 신년 감사예배',
         description: '부산노회 지도자 신년 감사예배에 여러분을 초청합니다.',
+        imageUrl: '"images/pic3.png"',
+        link: {
+          mobileWebUrl: '"images/pic3.png"',
+          webUrl: 'https://kosinpage.github.io/#Greetings'
+        }
       }
     });
 //]]>
