--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       content: {
         title: '2022 부산노회 지도자 신년 감사예배',
         description: '부산노회 지도자 신년 감사예배에 여러분을 초청합니다.',
-        imageUrl: '"images/pic3.png"',
+        imageUrl: 'kosinpage.github.io/images/1pic3 (2).jpg',
         link: {
-          mobileWebUrl: '"images/pic3.png"',
+          mobileWebUrl: 'kosinpage.github.io/images/1pic3 (2).jpg',
           webUrl: 'https://kosinpage.github.io/#Greetings'
         }
       }
