--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
                 <div class="col text-center">
                     <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">수정교회(담임목사 이희영)<br>☎051-464-3556</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">부산광역시 동구 수정북로 9</h6>
+                        <h5 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">송도제일교회(김형렬 목사 시무)<br>☎051-489-6071</h5>
+                        <h6 style="font-family: 'Noto Serif KR', serif;font-size:1.5em">부산광역시 서구 성산길 46</h6>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-md-12">
                         <div class="my-3 text-center">
-                            <a href="http://naver.me/5CzikVMa">
+                            <a href="http://naver.me/FyKtQIbF">
                                 <img alt="naver-map" class="map-icon" id="naver-map"
                                      src="images/map/naver-map.png"/>
                             </a>
-                            <a href="http://kko.to/sKTz70O4H">
+                            <a href="http://kko.to/wqw-Ros6m">
                                 <img alt="kakao-map" class="map-icon" id="kakao-map"
                                      src="images/map/kakao-map.png"/>
                             </a>
-                            <a href="https://goo.gl/maps/dnLg4iJkCZ3cFnUPA">
+                            <a href="https://goo.gl/maps/ngWsx7npEm6Qs8CP8">
                                 <img alt="google-map" class="map-icon" id="google-map"
                                      src="images/map/google-map.png"/>
                             </a>
@@ -90,7 +90,7 @@
                             </label>
                         </div>
                         <div class="my-3">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3263.0266508079935!2d129.04145721560198!3d35.1310084675571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ebc722a85d27%3A0x70112a35ec821834!2z7IiY7KCV6rWQ7ZqM!5e0!3m2!1sko!2skr!4v1639631724527!5m2!1sko!2skr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1632.5108432477487!2d129.01413810826114!3d35.08119089004029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568e848d98fb66b%3A0xf4057f6e5c55fcba!2z7Iah64-E7KCc7J286rWQ7ZqM!5e0!3m2!1sko!2skr!4v1641171810169!5m2!1sko!2skr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
