--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 	                    <a id="kakao-link-btn" href="javascript:;" alt="이미지1"><img src="images/pic1.png" width="100%" border="0"></a>
 	                </td>
                 </tr>
+                <tr>
+                    <td align="center" valign="top" colspan="2" >
+	                    <a id="kakao-link-btn" href="javascript:;" alt="이미지1"><img src="images/pic4.jpg" width="100%" border="0"></a>
+	                </td>
+                </tr>
                     </h2>
                 </div>
             </div>
